--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@ Any manual edits may be lost.
 </style><style>
 .dbat {padding-left :10%;padding-right :10%;}
 
-</style></head><body class="bw-def-page-setup bw-font-sans-serif dbat"><br><br><p><a href="https://opensource.org/licenses/BSD-2-Clause"><img src="https://img.shields.io/badge/License-BSD%202--Clause-blue.svg" alt="License" /></a></p>
+</style></head><body class="bw-def-page-setup bw-font-sans-serif dbat"><br><br><p><a href="https://opensource.org/licenses/BSD-2-Clause"><img src="https://img.shields.io/badge/License-BSD%202--Clause-blue.svg" alt="License" /></a>
+<a href="https://app.netlify.com/sites/deftio-provisional-patent-template/deploys"><img src="https://api.netlify.com/api/v1/badges/2d072ed0-04ac-4523-b986-003b254379d2/deploy-status" alt="Netlify Status" /></a></p>
 <h1 id="aprovisionalpatenttemplateforinventors">A Provisional Patent Template for Inventors</h1>
 <p>(c) 2020 Manu Chatterjee  -- deftio (at) deftio (dot) com</p>
-<p>As(an)entreprenuer or inventor understanding Intellectual Property is a important.  One of the key aspects of IP is getting a patent.  A patent grant's the owner the right to make or produce something exclusively for a period of time (typically 20 years from the date of filing).  </p>
+<p>For entreprenuers and inventors understanding Intellectual Property is a important.  One of the key aspects of IP is getting a patent.  Patents grant the owner the right to make or produce something exclusively for a period of time (typically 20 years from the date of filing).  </p>
 <p>This repository contains a template that anyone can use to draft a simple provisional patent and file it with the US Patent office.</p>
 <p>I've been through several startups, worked at some very large companies, and had over 45 patents granted.  I have used the template here for many of my filings and for assisting other startups in getting their first filings done.  More importantly, by using a good template, it saves time for when you must convert a provisional patent in to a full patent filing.</p>
-<p>This repo is an overview of provisional patents from a creator / inventor's point of view, along with a template and explanation of the patent process.  I'll touch on US based patents, provisional patents, and conversion, but I strongly advise that you seek professional legal advice if you are inexperienced with the Intellectual Property landscape.</p>
+<p>This repo is an overview of provisional patents from a creator / inventor's point of view, along with a template and explanation of the patent process.  I'll touch on US based patents, provisional patents, and conversion, but I strongly advise that you seek professional legal advice if you are inexperienced with the Intellectual Property landscape.  Also patents cost money to file and issue (outside of time and any legal fees).  Patents are not automatically enforced by any government agency.  It is the responsibility of patent owner to identify infringers and to use legal action to affect a result.</p>
 <h2 id="quickdisclaimer">Quick disclaimer</h2>
 <p><strong>I am not a lawyer and cannot provide legal advice.  If you have any doubts then please seek the advice of a patent attorney</strong></p>
 <h2 id="linkstotemplateexamplesresources">Links to Template, Examples, Resources</h2>
@@ -85,7 +86,7 @@ Any manual edits may be lost.
 <p>Link to a filled out example is here: <a href="./Prov-Patent-Template-Example.pdf">Provisional Patent Filled out Example .pdf</a></p>
 <p>Here is the USPTO page for getting the latest provisional patent filing sheet <a href="https://www.uspto.gov/sites/default/files/documents/sb0016.pdf">SB016</a>.  This is the "boilerplate" which contains the office type info such as the address of the inventors and docket or signature info.</p>
 <p>Here is a link to where to file on the USPTO. <a href="https://patentcenter.uspto.gov/#!/submissions/fa2fa6b1-8794-46df-b4b0-c54ae9b8348b/filingMethod?category=NewSubmissions">USPTO online filing</a></p>
-<p>International filing?  Once you file your provisional you can use the filing date and your filled out application (including your filled out template) to assist your legal counsel in getting patent protection in other countries.  Be sure to observe specific time limits.</p>
+<p>International filing? This is a US based form, so cnce you file your provisional you can use the filing date and your filled out application (including your filled out template) to assist your legal counsel in getting patent protection in other countries.  Be sure to observe specific time limits.</p>
 <h2 id="basicprocess">Basic Process</h2>
 <ol>
 <li>Identify the patentable material. To be patentable an invention must be "novel", "useful", and "not obvious"<ul>
@@ -100,8 +101,9 @@ Any manual edits may be lost.
 <h2 id="quicknotes">Quick notes:</h2>
 <ul>
 <li>A provisional patent is not examined by the Patent office for patentability, instead if functions as a placeholder (assuming all the parts are provided).  </li>
-<li>The term of a provisional patent is 12 months from filing.  This means that holder of the provisional patent has 12 months to convert the patent from provisional status to a full blown patent application.</li>
+<li>The term of a provisional patent is 12 months from filing.  This means that holder of the provisional patent has 12 months to convert the patent from provisional status to a full blown patent application.  This is a hard deadline and can't be extended (note there are some <strong>extremely rare</strong> circumstances where this can be appealed by a couple months but it comes at high costs and requires specific legal expertise - stick with 12 months.)</li>
 <li>You cannot file a provisional patent on a design patent.</li>
+<li>Once a provisional patent is filed the filer can claim "patent pending" on all public product documentation</li>
 </ul>
 <h2 id="supplementarylinks">Supplementary Links:</h2>
 <p>The following are supplementary links on provisional patents and how they are used.</p>
