removed netlify badge

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ Any manual edits may be lost.
 </style><style>
 .dbat {padding-left :10%;padding-right :10%;}
 
-</style></head><body class="bw-def-page-setup bw-font-sans-serif dbat"><br><br><p><a href="https://opensource.org/licenses/BSD-2-Clause"><img src="https://img.shields.io/badge/License-BSD%202--Clause-blue.svg" alt="License" /></a>
-<a href="https://app.netlify.com/sites/deftio-provisional-patent-template/deploys"><img src="https://api.netlify.com/api/v1/badges/2d072ed0-04ac-4523-b986-003b254379d2/deploy-status" alt="Netlify Status" /></a></p>
+</style></head><body class="bw-def-page-setup bw-font-sans-serif dbat"><br><br><p><a href="https://opensource.org/licenses/BSD-2-Clause"><img src="https://img.shields.io/badge/License-BSD%202--Clause-blue.svg" alt="License" /></a></p>
 <h1 id="aprovisionalpatenttemplateforinventors">A Provisional Patent Template for Inventors</h1>
 <p>(c) 2020 Manu Chatterjee  -- deftio (at) deftio (dot) com</p>
 <p>For entreprenuers and inventors understanding Intellectual Property is a important.  One of the key aspects of IP is getting a patent.  Patents grant the owner the right to make or produce something exclusively for a period of time (typically 20 years from the date of filing).  </p>
